# M1

./: .env.sample  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.metrics.yml  docker-compose.production.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: acr-template.json  appservice-template.json  backend-deploy.yml  backend-pr-push.yml  deploy.yml  frontend-appservice-template.json  frontend-deploy.yml  frontend-pr-push.yml  pr_push.yml
rms/: __main__.py  conftest.py  settings.py  shell.py
rms/admin/: services.py  views.py
rms/admin/services/: __init__.py  models.py  permissions.py  users.py
rms/admin/tests/: test_views.py
rms/articles/: managers.py  models.py  services.py  views.py
rms/articles/tests/: test_views.py
rms/auth/: dependencies.py  managers.py  models.py  services.py  views.py
rms/auth/tests/: test_views.py
rms/file_processing/: clients.py  managers.py  models.py  services.py  views.py
rms/file_processing/services/: __init__.py  extract_pdf_info.py  file_upload.py  keyword_extractor.py  models.py  utils.py
rms/file_processing/tests/: conftest.py  test_pdf_file_processing.py
rms/file_processing/tests/test_data/: pdf_1.pdf.enc
rms/migrations/: models.py  runner.py
rms/migrations/sqls/: 0001_initial.sql  0002_create_user_tables.sql  0003_create_file_tables.sql  0004_create_article_processing_model.sql  0005_add_creator_fk_to_article.sql
rms/search_engine/: clients.py  services.py  utils.py  views.py
rms/search_engine/assets/: stopwords.txt
rms/search_engine/models/: __init__.py  dblp_models.py  models.py  scholar_models.py  scopus_models.py
rms/search_engine/tests/: test_clients.py  test_params_builder.py
rms/utils/: encrypt_test_file.py  exceptions.py  list.py  managers.py  postgres.py
rms_fe/: .env.local  .env.production  .eslintrc  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
rms_fe/src/: env.d.ts  main.tsx  router.tsx
rms_fe/src/clients/: articles.ts  auth.ts  search-engine.ts  users.ts
rms_fe/src/components/: EditableMarkdownField.tsx  EditableTextField.css  EditableTextField.tsx  ServicesIcons.tsx
rms_fe/src/hooks/: useSearchParamsState.ts
rms_fe/src/state/: authState.ts
rms_fe/src/types/: utils.ts
rms_fe/src/types/api/: article.ts  (+5 more)
rms_fe/src/utils/: api.ts  copy.ts  env.ts  locale.ts  search-engine.ts
rms_fe/src/views/: HomePage.tsx  MainAppScaffold.tsx
scripts/: launch_dev.sh  launch_prod.sh
tasks/: backend.yml  deployment.yml  lint.yml
(+27 files in other folders)
