[tool.poetry]
name = "reviewer matching system - rms"
version = "0.1.0"
description = "System for recommending reviewers for a supplied scientific paper"
authors = [
    "Philip Policki <philip.policki@gmail.com>",
    "Jakub Syska <jaksyska@gmail.com>",
    "Jan Krokos <jankrokos@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
aiohttp = "^3.8.6"
azure-storage-blob = "^12.18.3"
bcrypt = "^4.0.1"
pypdf = "^3.16.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
black = "^23.9.1"
pytest = "^7.4.2"

[tool.black]
line-length = 120


[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
